--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -9,6 +9,9 @@
         </div>
     <% end %>
     
+    <%= f.label :title, 'タイトル' %>
+    <%= f.text_field :title %>
+    
     <%= f.label :conten,'メッセージ' %>
     <%= f.text_field :content %>
     
